# randogroup

./: .pre-commit-config.yaml  pyproject.toml
src/randogroup/: __init__.py  app.css  app.py  app.tcss  student_lists.py
test/: test_app.py  test_draw_students.py
tests/: test_app.py
